--- a/styles.css
+++ b/styles.css
@@ -340,11 +340,18 @@ main {
     gap: 40px;
 }
 
-.gallery-grid-2 img {
+.gallery-grid-2 img,
+.gallery-grid-3 img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     display: block;
+}
+
+.gallery-grid-3 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 40px;
 }
 
 
